--- a/settings.ini
+++ b/settings.ini
@@ -8,7 +8,7 @@ lib_name = test_library
 
 user = TaiseiHashimoto
 description = This is a project to try nbdev.
-# keywords = some keywords
+keywords = nbdev cicd
 author = Taisei Hashimoto
 author_email = hash.0221.tai@gmail.com
 copyright = Taisei Hashimoto
